[INFER] Watch for global slots reallocation during compilation, bug 650076, always handle overflowing inclocal/arg/global regardless of pushed type, bug 650148.